Fix white spaces of first-child Hang

--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -21,7 +21,7 @@ h1.hang {
   }
 }
 
-.section > h1.hang:first-child + * {
+section > h1.hang:first-child + * {
   @media (min-width: $breakpoint-full) {
     margin-top: $margin-top-section-heading;
   }
